--- a/src/MainBody.css
+++ b/src/MainBody.css
@@ -238,3 +238,146 @@ font-weight: 600;
     font-family: 'Montserrat', sans-serif;
 
 }
+
+
+#customers {
+    font-family: Arial, Helvetica, sans-serif;
+   overflow-x: scroll;
+   overflow-y: scroll;
+    width: 60%;
+    margin-left:18%;
+    margin-bottom: 2%;
+    
+  }
+  
+  #customers td, #customers th {
+    border: 1px solid #ddd;
+    padding: 5px;
+    
+  }
+
+  #customers > tr > td{
+    
+     
+  }
+  
+  #customers tr:nth-child(even){background-color: #f2f2f2;}
+  
+  #customers tr:hover {background-color: #ddd;}
+  
+  #customers th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+   
+    
+    
+  }
+  #upcoming{
+      text-align: left;
+      font-size: 0.78rem;
+      font-family: 'Montserrat', sans-serif;
+  }
+  #matched{
+    text-align: right;
+    font-size: 0.78rem;
+    font-family: 'Montserrat', sans-serif;
+    margin-right: 3%;
+  }
+
+  #matchTableone{
+    font-size: 0.78rem;
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+  }
+
+  .matchedData{
+    text-align: right;
+    font-size: 1rem;
+    font-family: 'Montserrat', sans-serif;
+    padding-right: 3%;
+  }
+  /* #matchTableMain{
+      height: 20%;
+  }
+   */
+  #matchTableOneData1{
+   
+   display: inline-block;  
+     width: 35%;
+      margin-left: 10%;
+      border-radius: 5%;
+      
+      background-color: #EA99D5;
+  }
+  #matchTableOneData2{
+   
+    display: inline-block;  
+      width: 35%;
+       margin-left: 10%;
+       border-radius: 5%;
+      
+       background-color: #93FFD8;
+   }
+  
+  
+  #matchTableOneData1 > p{
+   padding: 0 -5%;
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+  }
+#cricketThirdDiv{
+    display: flex;
+    font-family: 'Montserrat', sans-serif;
+    flex-direction: row;
+    height: 5vh;
+    width: 60%;
+    height: 8vh;
+    color: #fff;
+    background-color: #222222;
+    margin-left: 18%;
+    border-left: none;
+    border-right: none;  
+}
+
+#matchTableOneDataInplay{
+    display: inline-block;  
+    float: left;
+      width: 30%;
+       margin-left: 2%;
+       border-radius: 5%;
+      
+       background-color: #93FFD8;
+}
+
+
+#inPlayTop{
+    border: 1px solid #35858B;
+    width: 20%;
+    height: 25%;
+    background-color: #35858B;
+border-radius: 10%;
+  display: inline-block;
+font-family: 'Montserrat', sans-serif; 
+float: left; 
+}
+
+#inPlayTeam{
+    display: inline-block;
+    font-size: 0.78rem;
+    text-align: center;
+    margin-top: 8%;
+    margin-right: 10%;
+    font-family: 'Montserrat', sans-serif; 
+    font-weight: 700;
+}
+#tvIcons{
+    font-size: 18px !important;
+    margin-left: 5%;
+}
+
+  @media screen and (max-width: 640px) {
+    table {
+        overflow-x: auto;
+        display: inline-block;
+    }
+    }
