--- a/src/Header.css
+++ b/src/Header.css
@@ -1,11 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Island+Moments&family=Spline+Sans:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-
+#HeaderTop{
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    width: 100%;
+    height: 38vh;
+}
 #headerMainDiv{
     width: 100%;
     height: 38vh;
     
     background-color: #f0a103;
+   
 }
 .headerTopDiv{
     display: flex;
@@ -79,7 +86,7 @@ background-color: #f8e3b7;
     width: 50%;
     height: 30%;
     border: 1px solid #1f1f1f;
-    margin-left: 23%;
+    margin-left: 33%;
     border-top-right-radius: 15px;
     border-top-left-radius: 15px;
     margin-top: 1%;
@@ -89,9 +96,9 @@ background-color: #f8e3b7;
 
 #headerThirdDiv{
     width: 50%;
-    height: 30%;
+    height: 33%;
     border: 1px solid #1f1f1f;
-    margin-left: 23%;
+    margin-left: 33%;
     border-bottom-right-radius: 15px;
     border-bottom-left-radius: 15px;
     margin-top: 0.%;
