--- a/src/MainBody.css
+++ b/src/MainBody.css
@@ -3,9 +3,9 @@
 
 #mainBodyTopDiv{
 height: 20vh;
-width: 60%;
+width: 80%;
 border: 1px solid #000000;
-margin-top: 10%;
+margin-top: 20%;
 margin-left: 18%;
 border-left: none;
 border-right: none;
@@ -217,7 +217,7 @@ font-weight: 600;
     display: flex;
     flex-direction: row;
     height: 5vh;
-    width: 60%;
+    width: 80%;
     height: 8vh;
     background-color: #222222;
     margin-left: 18%;
@@ -244,7 +244,7 @@ font-weight: 600;
     font-family: Arial, Helvetica, sans-serif;
    overflow-x: scroll;
    overflow-y: scroll;
-    width: 60%;
+    width: 82%;
     margin-left:18%;
     margin-bottom: 2%;
     
@@ -325,12 +325,17 @@ font-weight: 600;
     font-family: 'Montserrat', sans-serif;
     text-align: center;
   }
+  #matchTableOneData2 > p{
+    padding-left: 5%;
+     font-family: 'Montserrat', sans-serif;
+     text-align: center;
+   }
 #cricketThirdDiv{
     display: flex;
     font-family: 'Montserrat', sans-serif;
     flex-direction: row;
     height: 5vh;
-    width: 60%;
+    width: 82%;
     height: 8vh;
     color: #fff;
     background-color: #222222;
@@ -352,8 +357,9 @@ font-weight: 600;
 
 #inPlayTop{
     border: 1px solid #35858B;
-    width: 20%;
-    height: 25%;
+    width: 15%;
+text-align: center;
+    height: 20%;
     background-color: #35858B;
 border-radius: 10%;
   display: inline-block;
@@ -369,6 +375,7 @@ float: left;
     margin-right: 10%;
     font-family: 'Montserrat', sans-serif; 
     font-weight: 700;
+    margin-left: 2%;
 }
 #tvIcons{
     font-size: 18px !important;
